<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Waterloo Mobile Studio

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#F8F1F1"
    android:id="@+id/rootView">
    
	<Gallery
		android:id="@+id/gallery"	
		android:layout_width="fill_parent" 
		android:layout_height="150dp"
		android:layout_margin="5dp"/>

	<TextView
	    android:id="@+id/textViewTitle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentStart="true"
	    android:layout_alignEnd="@+id/textViewBody"
	    android:layout_below="@+id/gallery"
	    android:layout_margin="10dp"
	    android:text="@string/productName"
	    android:textColor="#040404"
	    android:textSize="18sp"
	    android:textStyle="bold"
	    android:typeface="sans" />

    <Spinner
        android:id="@+id/spinnerOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/imageButtonAddToCart"
        android:layout_below="@+id/textViewTitle"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/textViewOptionName" />

    <TextView
        android:id="@+id/textViewOptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerOptions"
        android:layout_alignStart="@+id/textViewTitle"
        android:text="@string/options"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinnerOptions"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/image_border"
        android:padding="10dp"
        android:text="@string/productDesc"
        android:textAlignment="textStart"
        android:textColor="#343434"
        android:textSize="14sp" />
        		
    <ImageButton
        android:id="@+id/imageButtonAddToCart"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/spinnerOptions"
        android:layout_alignEnd="@+id/gallery"
        android:background="@drawable/add_to_cart"
        android:text="@string/addToCart" />
    
    <ImageView
        android:id="@+id/imageViewPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/border" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>
