<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2015 Waterloo Mobile Studio

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
    <!-- ListRow Left side thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="5dp">
        <ImageView
            android:id="@+id/imageViewRepresentativeImage"
            android:contentDescription="@string/app_name"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:background="@drawable/image_border"
            android:src="@drawable/place_holder_image" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewArrow"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/imageViewArrow"
        android:layout_toEndOf="@+id/thumbnail"
        android:paddingBottom="5dp"        
        android:text="@string/productName"
        android:textColor="#040404"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:paddingTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/productDesc"
        android:textColor="#343434"
        android:textSize="14sp" />

</RelativeLayout> 
